--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <title>Animal Sound</title>
 </head>
 <body>
-    <h1>Try not to touch the animals/h1>
+    <h1>Try not to touch the animals</h1>
     <button><a href="/dog">Dog</a></button><br><br>
     <button><a href="/cat">Cat</a></button><br><br>
     <button><a href="/lion">Lion</a></button><br><br>
